--- a/index.html
+++ b/index.html
@@ -3,45 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Serial Diagnostic Tool</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Serial Speed & Latency Tester</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <style>
+        body.dark-mode {
+            background-color: #121212;
+            color: white;
+        }
+        textarea {
+            height: 200px;
+            resize: vertical;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="text-center">🔍 Web Serial Diagnostic Tool</h1>
+<div class="container py-4">
+    <h2 class="text-center">Công cụ đo tốc độ và độ trễ Serial</h2>
 
-        <div class="row">
-            <div class="col-md-6">
-                <button id="connectButton" class="btn btn-success">Kết nối Serial</button>
-                <button id="disconnectButton" class="btn btn-danger" disabled>Ngắt kết nối</button>
-                <button id="clearButton" class="btn btn-warning">🧹 Xóa màn hình</button>
-            </div>
-            <div class="col-md-6">
-                <input type="number" id="baudRate" class="form-control" placeholder="Nhập baud rate..." value="9600">
-                <select id="dataFormat" class="form-select">
-                    <option value="ascii">ASCII</option>
-                    <option value="hex">HEX</option>
-                    <option value="bin">BIN</option>
-                </select>
-            </div>
+    <div class="row g-3 mt-3">
+        <div class="col-md-4">
+            <label for="baudRate">Baud Rate</label>
+            <input type="number" id="baudRate" class="form-control" value="9600">
         </div>
-
-        <textarea id="serialOutput" readonly class="form-control mt-3"></textarea>
-
-        <div class="input-group mt-3">
-            <input type="text" id="serialInput" class="form-control" placeholder="Nhập lệnh kiểm tra...">
-            <button id="sendButton" class="btn btn-primary">Gửi</button>
+        <div class="col-md-4">
+            <label for="interval">Khoảng gửi (ms)</label>
+            <input type="number" id="interval" class="form-control" value="1000">
         </div>
-
-        <div class="mt-3">
-            <button id="pingTestButton" class="btn btn-info">🔄 Ping Test</button>
-            <button id="saveButton" class="btn btn-secondary">💾 Lưu báo cáo</button>
-            <input type="checkbox" id="autoScroll" checked> Auto Scroll
-            <input type="checkbox" id="darkMode"> Dark Mode
+        <div class="col-md-4 d-flex align-items-end gap-2">
+            <button id="connectBtn" class="btn btn-primary">Kết nối</button>
+            <button id="disconnectBtn" class="btn btn-danger" disabled>Ngắt</button>
+            <label><input type="checkbox" id="darkMode"> Tối</label>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <div class="mt-3">
+        <textarea id="output" class="form-control" readonly></textarea>
+        <div class="mt-2">
+            <strong>Tốc độ (bytes/s):</strong> <span id="bps">0</span>
+            &nbsp;|&nbsp;
+            <strong>Độ trễ phản hồi:</strong> <span id="latency">-</span> ms
+        </div>
+    </div>
+</div>
+
+<script>
+let port, writer, reader, timer;
+let bytesReceived = 0, lastTime = 0;
+let latencyStart = 0;
+
+const connectBtn = document.getElementById("connectBtn");
+const disconnectBtn = document.getElementById("disconnectBtn");
+
+connectBtn.addEventListener("click", async () => {
+    try {
+        port = await navigator.serial.requestPort();
+        await port.open({ baudRate: parseInt(document.getElementById("baudRate").value) });
+
+        writer = port.writable.getWriter();
+        reader = port.readable.getReader();
+
+        disconnectBtn.disabled = false;
+        connectBtn.disabled = true;
+
+        startTest();
+    } catch (err) {
+        alert("Không thể kết nối: " + err);
+    }
+});
+
+disconnectBtn.addEventListener("click", async () => {
+    stopTest();
+    if (reader) await reader.cancel();
+    if (writer) writer.releaseLock();
+    if (port) await port.close();
+    connectBtn.disabled = false;
+    disconnectBtn.disabled = true;
+});
+
+document.getElementById("darkMode").addEventListener("change", () => {
+    document.body.classList.toggle("dark-mode");
+});
+
+function startTest() {
+    const output = document.getElementById("output");
+    const interval = parseInt(document.getElementById("interval").value);
+    const bpsDisplay = document.getElementById("bps");
+    const latencyDisplay = document.getElementById("latency");
+
+    bytesReceived = 0;
+    lastTime = Date.now();
+
+    timer = setInterval(async () => {
+        const msg = "ping" + Date.now();
+        latencyStart = Date.now();
+        await writer.write(new TextEncoder().encode(msg + "\n"));
+    }, interval);
+
+    (async () => {
+        while (port.readable) {
+            const { value, done } = await reader.read();
+            if (done) break;
+            if (value) {
+                const text = new TextDecoder().decode(value);
+                bytesReceived += text.length;
+                output.value += text;
+                if (text.includes("ping")) {
+                    const now = Date.now();
+                    latencyDisplay.textContent = now - latencyStart;
+                }
+            }
+            const now = Date.now();
+            const bps = Math.round(bytesReceived / ((now - lastTime) / 1000));
+            bpsDisplay.textContent = bps;
+        }
+    })();
+}
+
+function stopTest() {
+    clearInterval(timer);
+}
+</script>
 </body>
 </html>
