--- a/index.html
+++ b/index.html
@@ -1,127 +1,46 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serial Speed & Latency Tester</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <style>
-        body.dark-mode {
-            background-color: #121212;
-            color: white;
-        }
-        textarea {
-            height: 200px;
-            resize: vertical;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Serial Connection Tester</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body.dark-mode { background-color: #121212; color: #fff; }
+    textarea { height: 200px; resize: vertical; font-family: monospace; }
+  </style>
 </head>
 <body>
 <div class="container py-4">
-    <h2 class="text-center">Công cụ đo tốc độ và độ trễ Serial</h2>
+  <h3 class="text-center mb-4">Kiểm tra kết nối Serial (COM/PLT)</h3>
 
-    <div class="row g-3 mt-3">
-        <div class="col-md-4">
-            <label for="baudRate">Baud Rate</label>
-            <input type="number" id="baudRate" class="form-control" value="9600">
-        </div>
-        <div class="col-md-4">
-            <label for="interval">Khoảng gửi (ms)</label>
-            <input type="number" id="interval" class="form-control" value="1000">
-        </div>
-        <div class="col-md-4 d-flex align-items-end gap-2">
-            <button id="connectBtn" class="btn btn-primary">Kết nối</button>
-            <button id="disconnectBtn" class="btn btn-danger" disabled>Ngắt</button>
-            <label><input type="checkbox" id="darkMode"> Tối</label>
-        </div>
+  <div class="row g-3">
+    <div class="col-md-4">
+      <label>Baud Rate</label>
+      <input id="baudRate" class="form-control" type="number" value="9600">
     </div>
+    <div class="col-md-4">
+      <label>Chu kỳ gửi (ms)</label>
+      <input id="interval" class="form-control" type="number" value="1000">
+    </div>
+    <div class="col-md-4 d-flex align-items-end gap-2">
+      <button id="connectBtn" class="btn btn-success">Kết nối</button>
+      <button id="disconnectBtn" class="btn btn-danger" disabled>Ngắt</button>
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="darkMode">
+        <label class="form-check-label" for="darkMode">Tối</label>
+      </div>
+    </div>
+  </div>
 
-    <div class="mt-3">
-        <textarea id="output" class="form-control" readonly></textarea>
-        <div class="mt-2">
-            <strong>Tốc độ (bytes/s):</strong> <span id="bps">0</span>
-            &nbsp;|&nbsp;
-            <strong>Độ trễ phản hồi:</strong> <span id="latency">-</span> ms
-        </div>
-    </div>
+  <textarea id="output" class="form-control mt-3" readonly></textarea>
+  <div class="mt-2">
+    <strong>Tốc độ:</strong> <span id="bps">0</span> B/s |
+    <strong>Độ trễ:</strong> <span id="latency">-</span> ms |
+    <strong>Đánh giá:</strong> <span id="evaluation">Chưa có</span>
+  </div>
 </div>
 
-<script>
-let port, writer, reader, timer;
-let bytesReceived = 0, lastTime = 0;
-let latencyStart = 0;
-
-const connectBtn = document.getElementById("connectBtn");
-const disconnectBtn = document.getElementById("disconnectBtn");
-
-connectBtn.addEventListener("click", async () => {
-    try {
-        port = await navigator.serial.requestPort();
-        await port.open({ baudRate: parseInt(document.getElementById("baudRate").value) });
-
-        writer = port.writable.getWriter();
-        reader = port.readable.getReader();
-
-        disconnectBtn.disabled = false;
-        connectBtn.disabled = true;
-
-        startTest();
-    } catch (err) {
-        alert("Không thể kết nối: " + err);
-    }
-});
-
-disconnectBtn.addEventListener("click", async () => {
-    stopTest();
-    if (reader) await reader.cancel();
-    if (writer) writer.releaseLock();
-    if (port) await port.close();
-    connectBtn.disabled = false;
-    disconnectBtn.disabled = true;
-});
-
-document.getElementById("darkMode").addEventListener("change", () => {
-    document.body.classList.toggle("dark-mode");
-});
-
-function startTest() {
-    const output = document.getElementById("output");
-    const interval = parseInt(document.getElementById("interval").value);
-    const bpsDisplay = document.getElementById("bps");
-    const latencyDisplay = document.getElementById("latency");
-
-    bytesReceived = 0;
-    lastTime = Date.now();
-
-    timer = setInterval(async () => {
-        const msg = "ping" + Date.now();
-        latencyStart = Date.now();
-        await writer.write(new TextEncoder().encode(msg + "\n"));
-    }, interval);
-
-    (async () => {
-        while (port.readable) {
-            const { value, done } = await reader.read();
-            if (done) break;
-            if (value) {
-                const text = new TextDecoder().decode(value);
-                bytesReceived += text.length;
-                output.value += text;
-                if (text.includes("ping")) {
-                    const now = Date.now();
-                    latencyDisplay.textContent = now - latencyStart;
-                }
-            }
-            const now = Date.now();
-            const bps = Math.round(bytesReceived / ((now - lastTime) / 1000));
-            bpsDisplay.textContent = bps;
-        }
-    })();
-}
-
-function stopTest() {
-    clearInterval(timer);
-}
-</script>
+<script src="script.js"></script>
 </body>
 </html>
